--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "//lib/logger/klog:go_default_library",
         "@com_github_mitchellh_go_homedir//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
+        "@org_golang_x_crypto//ssh/agent:go_default_library",
     ],
 )
 
