--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,7 +8,11 @@ gazelle(
 )
 
 exports_files(
-    ["tsconfig.json", "package.json", "yarn.lock"],
+    [
+        "tsconfig.json",
+        "package.json",
+        "yarn.lock",
+    ],
     visibility = ["//:__subpackages__"],
 )
 
