--- a/astore/server/auth/BUILD.bazel
+++ b/astore/server/auth/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//astore/common:go_default_library",
         "//astore/rpc:auth-go",
+        "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
