--- a/astore/client/auth/BUILD.bazel
+++ b/astore/client/auth/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
         "//lib/cache:go_default_library",
         "//lib/client/ccontext:go_default_library",
         "//lib/kcerts:go_default_library",
-        "//lib/logger/klog:go_default_library",
+        "//lib/logger:go_default_library",
         "@com_github_pkg_browser//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
