working dns with nicer coverage and 0 scaling issues

--- a/lib/knetwork/kdns/BUILD.bazel
+++ b/lib/knetwork/kdns/BUILD.bazel
@@ -26,6 +26,7 @@ go_test(
     race = "on",
     deps = [
         "//lib/knetwork:go_default_library",
+        "@com_github_miekg_dns//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
