--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//lib/client:go_default_library",
         "//lib/goroutine:go_default_library",
+        "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/khttp:go_default_library",
