--- a/machinist/mnode/BUILD.bazel
+++ b/machinist/mnode/BUILD.bazel
@@ -13,8 +13,10 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//astore/rpc:auth-go",
+        "//lib/client:go_default_library",
         "//lib/enauth:go_default_library",
         "//lib/kcerts:go_default_library",
+        "//lib/kflags/kcobra:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/retry:go_default_library",
         "//machinist:go_default_library",
