verify leak and pr changes

--- a/lib/knetwork/kdns/BUILD.bazel
+++ b/lib/knetwork/kdns/BUILD.bazel
@@ -26,7 +26,9 @@ go_test(
     race = "on",
     deps = [
         "//lib/knetwork:go_default_library",
+        "//lib/logger:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@org_uber_go_goleak//:go_default_library",
     ],
 )
