--- a/proxy/nss/BUILD.bazel
+++ b/proxy/nss/BUILD.bazel
@@ -1,67 +1,67 @@
 cc_library(
-  name = "nss_autouser",
-  copts = [
-    "-D_POSIX_C_SOURCE=200809L",
-    "-pedantic",
-    "-Wall",
-    "-std=c17",
-  ],
-  hdrs = [
-      "nss-autouser.h",
-      "//proxy/nss/confparse:confparse.h",
-  ],
-  srcs = [
-      "nss-autouser.c",
-      "//proxy/nss/confparse:confparse.c",
-  ],
+    name = "nss_autouser",
+    srcs = [
+        "nss-autouser.c",
+        "//proxy/nss/confparse:confparse.c",
+    ],
+    hdrs = [
+        "nss-autouser.h",
+        "//proxy/nss/confparse:confparse.h",
+    ],
+    copts = [
+        "-D_POSIX_C_SOURCE=200809L",
+        "-pedantic",
+        "-Wall",
+        "-std=c17",
+    ],
 )
 
 genrule(
-  name = "nss_autouser-nostatic",
-  srcs = [
-      "nss-autouser.c",
-  ],
-  outs = [
-      "nss-autouser-nostatic.c",
-  ],
-  cmd = "sed -e 's@^static @@' < $< > $@",
+    name = "nss_autouser-nostatic",
+    srcs = [
+        "nss-autouser.c",
+    ],
+    outs = [
+        "nss-autouser-nostatic.c",
+    ],
+    cmd = "sed -e 's@^static @@' < $< > $@",
 )
 
 cc_library(
-  name = "nss_autouser-fortesting",
-  copts = [
-    "-DAU_CONFIG_PATH=\\\"./nss-autouser.conf\\\"",
-    "-D_POSIX_C_SOURCE=200809L",
-    "-Iproxy/nss",
-    "-pedantic",
-    "-Wall",
-    "-std=c17",
-  ],
-  hdrs = [
-      "nss-autouser.h",
-  ],
-  srcs = [
-      ":nss_autouser-nostatic",
-  ],
-  deps = [
-    "//proxy/nss/confparse:confparse",
-  ]
+    name = "nss_autouser-fortesting",
+    srcs = [
+        ":nss_autouser-nostatic",
+    ],
+    hdrs = [
+        "nss-autouser.h",
+    ],
+    copts = [
+        "-DAU_CONFIG_PATH=\\\"./nss-autouser.conf\\\"",
+        "-D_POSIX_C_SOURCE=200809L",
+        "-Iproxy/nss",
+        "-pedantic",
+        "-Wall",
+        "-std=c17",
+    ],
+    deps = [
+        "//proxy/nss/confparse",
+    ],
 )
 
 cc_test(
-  name = "nss_autouser_test",
-  copts = [
-    "-std=c++2a",
-    "-Wall",
-    "-pedantic",
-  ],
-  srcs = [
-    "nss-autouser_test.cc",
-  ],
-  deps = [
-    ":nss_autouser-fortesting",
-    "//proxy/nss/confparse:confparse",
-    "@gtest//:gtest_main",
-  ],
-  data = glob(["testdata/**"]),
+    name = "nss_autouser_test",
+    srcs = [
+        "nss-autouser_test.cc",
+    ],
+    copts = [
+        "-std=c++2a",
+        "-Wall",
+        "-pedantic",
+    ],
+    data = glob(["testdata/**"]),
+    deps = [
+        ":nss_autouser-fortesting",
+        "//proxy/nss/confparse",
+        "@gtest//:gtest_main",
+    ],
 )
