--- a/lib/enauth/BUILD.bazel
+++ b/lib/enauth/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//lib/logger:go_default_library",
         "//lib/retry:go_default_library",
         "//lib/srand:go_default_library",
+        "@com_github_pkg_browser//:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
