--- a/machinist/mnode/BUILD.bazel
+++ b/machinist/mnode/BUILD.bazel
@@ -1,12 +1,15 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
         "commands.go",
+        "config.go",
         "factory.go",
         "flags.go",
         "mnode.go",
+        "templates.go",
+        ":mnode_sshd_conf"
     ],
     importpath = "github.com/enfabrica/enkit/machinist/mnode",
     visibility = ["//visibility:public"],
@@ -24,4 +27,24 @@ go_library(
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
+)
+
+
+go_embed_data(
+    name = "mnode_sshd_conf",
+    src = "assets/machinist_sshd.conf.gotmpl",
+    package = "mnode",
+    string = True,
+    var = "SSHDTemplate",
+    visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = [
+        "config_test.go",
+        "templates_test.go",
+    ],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
