--- a/machinist/mnode/BUILD.bazel
+++ b/machinist/mnode/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
         "flags.go",
         "mnode.go",
         "templates.go",
-        ":mnode_sshd_conf"
+        ":mnode_sshd_conf",
     ],
     importpath = "github.com/enfabrica/enkit/machinist/mnode",
     visibility = ["//visibility:public"],
@@ -28,7 +28,6 @@ go_library(
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
 )
-
 
 go_embed_data(
     name = "mnode_sshd_conf",
