Include distroless container

--- a/manager/server/BUILD.bazel
+++ b/manager/server/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_push")
 
 go_library(
     name = "go_default_library",
@@ -16,4 +18,21 @@ go_binary(
     name = "server",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_image(
+    name = "license-manager",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
+	base = "@golang_base//image",
+)
+
+container_push(
+	name = "upload-server",
+	format = "Docker",
+	image = ":license-manager",
+	registry = "gcr.io",
+	repository = "devops-284019/infra/flexlm",
+	tag = "license-manager-server",
+	visibility = ["//visibility:public"],
 )
