--- a/manager/client/BUILD.bazel
+++ b/manager/client/BUILD.bazel
@@ -8,6 +8,8 @@ go_library(
     deps = [
         "//manager/rpc:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
+        "@org_golang_google_grpc//status:go_default_library",
     ],
 )
 
