--- a/manager/common/BUILD.bazel
+++ b/manager/common/BUILD.bazel
@@ -8,6 +8,8 @@ go_library(
     deps = [
         "//astore/server/astore:go_default_library",
         "//manager/rpc:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//metadata:go_default_library",
+        "@org_golang_google_grpc//status:go_default_library",
     ],
 )
