update to not comflict, not interface{} and little typecasting

--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "cache.go",
         "certs.go",
+        "keys.go",
         "signer.go",
         "ssh.go",
     ],
