--- a/astore/server/auth/BUILD.bazel
+++ b/astore/server/auth/BUILD.bazel
@@ -37,5 +37,6 @@ go_test(
         "//lib/srand:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
     ],
 )
