--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -6,10 +6,12 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/client/commands",
     visibility = ["//visibility:public"],
     deps = [
-        "//astore/client/auth:go_default_library",
+        "//astore/rpc:auth-go",
         "//lib/client:go_default_library",
         "//lib/config/identity:go_default_library",
+        "//lib/kauth:go_default_library",
         "//lib/kflags:go_default_library",
+        "//lib/retry:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
