--- a/machinist/mnode/cmd/BUILD.bazel
+++ b/machinist/mnode/cmd/BUILD.bazel
@@ -5,7 +5,11 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/machinist/mnode/cmd",
     visibility = ["//visibility:private"],
-    deps = ["//machinist/mnode:go_default_library"],
+    deps = [
+        "//lib/client:go_default_library",
+        "//lib/kflags/kcobra:go_default_library",
+        "//machinist/mnode:go_default_library",
+    ],
 )
 
 go_binary(
