--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -4,6 +4,7 @@ load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 go_library(
     name = "go_default_library",
     srcs = [
+        "config.go",
         "controller.go",
         "factory.go",
         "flags.go",
@@ -13,6 +14,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist/mserver",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/knetwork/kdns:go_default_library",
         "//machinist:go_default_library",
         "//machinist/rpc:machinist-go",
         "@org_golang_google_grpc//:go_default_library",
