--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -4,6 +4,7 @@ load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 go_library(
     name = "go_default_library",
     srcs = [
+        "command.go",
         "config.go",
         "controller.go",
         "factory.go",
@@ -14,11 +15,13 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist/mserver",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/client:go_default_library",
         "//lib/knetwork/kdns:go_default_library",
         "//lib/logger:go_default_library",
         "//machinist:go_default_library",
         "//machinist/rpc:machinist-go",
         "@com_github_miekg_dns//:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
