--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -33,6 +33,7 @@ go_test(
     deps = [
         "//lib/client:go_default_library",
         "//lib/kcerts:go_default_library",
+        "//lib/kflags:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
