--- a/machinist/mnode/cmd/BUILD.bazel
+++ b/machinist/mnode/cmd/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_push")
 
 go_library(
     name = "go_default_library",
@@ -15,5 +17,22 @@ go_library(
 go_binary(
     name = "cmd",
     embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
+)
+
+go_image(
+    name = "image",
+    base = "@golang_base//image",
+    embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
+)
+
+container_push(
+    name = "upload-image",
+    format = "Docker",
+    image = ":image",
+    registry = "gcr.io",
+    repository = "devops-284019/infra/machinist/node",
+    tag = "latest",
     visibility = ["//visibility:public"],
 )
