--- a/machinist/mnode/assets/BUILD.bazel
+++ b/machinist/mnode/assets/BUILD.bazel
@@ -2,4 +2,5 @@ exports_files([
     "install_libpam-script.sh",
     "machinist_sshd.conf.gotmpl",
     "nss-autouser.conf.gotmpl",
+    "machinist.service.gotmpl",
 ])
