TODO(adam): tests

--- a/ui/package.json
+++ b/ui/package.json
@@ -38,5 +38,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "testMatch": [
+      "src/**/*.(test).{js,jsx,ts,tsx}",
+      "src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
+    ]
   }
 }
