Add in local tsconfig

--- a/ui/BUILD.bazel
+++ b/ui/BUILD.bazel
@@ -5,18 +5,11 @@ exports_files([
     "merge.js",
 ])
 
-filegroup(
-    name = "ui-extras",
-    srcs = [
-        "tsconfig.json",
-    ],
-    visibility = ["//visibility:public"],
-)
-
 react_project(
     name = "ptunnel",
     srcs = "//ui/ptunnel:srcs",
     package_json = "//ui/ptunnel:package.json",
     public = "//ui/ptunnel:public",
+    tsconfig = "//ui/ptunnel:tsconfig.json",
     yarn_lock = "//ui/ptunnel:yarn.lock",
 )
