--- a/ui/ptunnel/BUILD.bazel
+++ b/ui/ptunnel/BUILD.bazel
@@ -14,6 +14,7 @@ exports_files(
     [
         "package.json",
         "yarn.lock",
+        "tsconfig.json",
     ],
     visibility = ["//visibility:public"],
 )
