--- a/ui/package.json
+++ b/ui/package.json
@@ -16,10 +16,11 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "postinstall": "patch-package"
+  },
+  "devDependencies": {
+    "@bazel/runfiles": "^3.5.1",
+    "patch-package": "^6.2.2"
   },
   "eslintConfig": {
     "extends": [
@@ -40,9 +41,5 @@
     ]
   },
   "jest": {
-    "testMatch": [
-      "src/**/*.(test).{js,jsx,ts,tsx}",
-      "src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
-    ]
   }
 }
