--- a/ui/ptunnel/package.json
+++ b/ui/ptunnel/package.json
@@ -2,5 +2,10 @@
   "name": "ptunnel",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "scripts": {
+    "start": "ibazel run //ui:ptunnel-start",
+    "build": "bazel build //ui:ptunnel-build",
+    "test": "ibazel test //ui:ptunnel-test"
+  }
 }
