--- a/machinist/mnode/BUILD.bazel
+++ b/machinist/mnode/BUILD.bazel
@@ -17,8 +17,8 @@ go_library(
         "//astore/rpc:auth-go",
         "//lib/client:go_default_library",
         "//lib/kcerts:go_default_library",
-        "//lib/kflags/kcobra:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/multierror:go_default_library",
         "//lib/retry:go_default_library",
         "//machinist:go_default_library",
         "//machinist/rpc:machinist-go",
