--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -8,6 +9,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "material-design-lite": "^1.3.0",
     "package-merge": "^0.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -40,6 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-  }
+  "jest": {}
 }
