--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "material-design-icons": "^3.0.1",
     "material-design-lite": "^1.3.0",
     "package-merge": "^0.1.2",
     "react": "^17.0.2",
