--- a/machinist/cmd/BUILD.bazel
+++ b/machinist/cmd/BUILD.bazel
@@ -8,8 +8,9 @@ go_library(
     deps = [
         "//lib/client:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
-        "//machinist/mnode:go_default_library",
+        "//machinist:go_default_library",
         "//machinist/mserver:go_default_library",
+        "//machinist/node:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
