--- a/machinist/node/BUILD.bazel
+++ b/machinist/node/BUILD.bazel
@@ -6,22 +6,25 @@ go_library(
         "commands.go",
         "config.go",
         "factory.go",
-        "flags.go",
         "mnode.go",
         "templates.go",
     ],
-    importpath = "github.com/enfabrica/enkit/machinist/mnode",
+    importpath = "github.com/enfabrica/enkit/machinist/node",
     visibility = ["//visibility:public"],
     deps = [
         ":machinist_assets",
         "//astore/rpc:auth-go",
         "//lib/client:go_default_library",
+        "//lib/goroutine:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/retry:go_default_library",
         "//machinist:go_default_library",
+        "//machinist/config:go_default_library",
+        "//machinist/polling:go_default_library",
         "//machinist/rpc:machinist-go",
+        "//machinist/state:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
@@ -44,7 +47,7 @@ go_library(
 
 go_embed_data(
     name = "mnode_systemd_conf",
-    src = "//machinist/mnode/assets:machinist.service.gotmpl",
+    src = "//machinist/node/assets:machinist.service.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "SystemdTemplate",
@@ -53,7 +56,7 @@ go_embed_data(
 
 go_embed_data(
     name = "mnode_sshd_conf",
-    src = "//machinist/mnode/assets:machinist_sshd.conf.gotmpl",
+    src = "//machinist/node/assets:machinist_sshd.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "SSHDTemplate",
@@ -62,7 +65,7 @@ go_embed_data(
 
 go_embed_data(
     name = "nss_autouser_config",
-    src = "//machinist/mnode/assets:nss-autouser.conf.gotmpl",
+    src = "//machinist/node/assets:nss-autouser.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "NssConfig",
@@ -89,7 +92,7 @@ go_embed_data(
 
 go_embed_data(
     name = "libpam_script_install",
-    src = "//machinist/mnode/assets:install_libpam-script.sh",
+    src = "//machinist/node/assets:install_libpam-script.sh",
     package = "machinist_assets",
     var = "InstallLibPamScript",
     visibility = ["//visibility:public"],
