working with the new refactor

--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -2,15 +2,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "command.go",
-        "flags.go",
-    ],
+    srcs = ["command.go"],
     importpath = "github.com/enfabrica/enkit/machinist",
     visibility = ["//visibility:public"],
     deps = [
         "//lib/client:go_default_library",
         "//machinist/config:go_default_library",
+        "//machinist/machine:go_default_library",
+        "//machinist/mserver:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
