--- a/machinist/machine/BUILD.bazel
+++ b/machinist/machine/BUILD.bazel
@@ -4,12 +4,11 @@ go_library(
     name = "go_default_library",
     srcs = [
         "commands.go",
-        "config.go",
         "factory.go",
-        "mnode.go",
+        "node.go",
         "templates.go",
     ],
-    importpath = "github.com/enfabrica/enkit/machinist/node",
+    importpath = "github.com/enfabrica/enkit/machinist/machine",
     visibility = ["//visibility:public"],
     deps = [
         ":machinist_assets",
@@ -20,11 +19,9 @@ go_library(
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/retry:go_default_library",
-        "//machinist:go_default_library",
         "//machinist/config:go_default_library",
         "//machinist/polling:go_default_library",
         "//machinist/rpc:machinist-go",
-        "//machinist/state:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
@@ -47,7 +44,7 @@ go_library(
 
 go_embed_data(
     name = "mnode_systemd_conf",
-    src = "//machinist/node/assets:machinist.service.gotmpl",
+    src = "//machinist/machine/assets:machinist.service.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "SystemdTemplate",
@@ -56,7 +53,7 @@ go_embed_data(
 
 go_embed_data(
     name = "mnode_sshd_conf",
-    src = "//machinist/node/assets:machinist_sshd.conf.gotmpl",
+    src = "//machinist/machine/assets:machinist_sshd.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "SSHDTemplate",
@@ -65,7 +62,7 @@ go_embed_data(
 
 go_embed_data(
     name = "nss_autouser_config",
-    src = "//machinist/node/assets:nss-autouser.conf.gotmpl",
+    src = "//machinist/machine/assets:nss-autouser.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "NssConfig",
@@ -92,7 +89,7 @@ go_embed_data(
 
 go_embed_data(
     name = "libpam_script_install",
-    src = "//machinist/node/assets:install_libpam-script.sh",
+    src = "//machinist/machine/assets:install_libpam-script.sh",
     package = "machinist_assets",
     var = "InstallLibPamScript",
     visibility = ["//visibility:public"],
@@ -108,10 +105,7 @@ go_embed_data(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "config_test.go",
-        "templates_test.go",
-    ],
+    srcs = ["templates_test.go"],
     embed = [":go_default_library"],
     deps = [
         ":machinist_assets",
