--- a/astore/rpc/BUILD.bazel
+++ b/astore/rpc/BUILD.bazel
@@ -20,14 +20,14 @@ proto_library(
     ],
 )
 
-load("@rules_proto//proto:defs.bzl", "proto_library")
+#load("@rules_proto//proto:defs.bzl", "proto_library")
 
 go_proto_library(
     name = "astore-proto-lib",
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
     importpath = "github.com/enfabrica/enkit/astore/rpc/astore",
     proto = ":astore_proto",
-    visibility = ["//visibility:public"],
+    visibility = ["//visibility:public"]
 )
 
 go_proto_library(
