Machinist DNS Polling (#91)
* Adds in polling for Registering DNS entries
* Adds in registering and keepalives
* Adds in e2e testing

--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -1,22 +1,15 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-
-go_test(
-    name = "go_default_test",
-    srcs = ["machinist_e2e_test.go"],
-    embed = [":go_default_library"],
-    race = "on",
-    deps = [
-        "//machinist/mnode:go_default_library",
-        "//machinist/mserver:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//test/bufconn:go_default_library",
-    ],
-)
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["flags.go"],
+    srcs = ["command.go"],
     importpath = "github.com/enfabrica/enkit/machinist",
     visibility = ["//visibility:public"],
+    deps = [
+        "//lib/client:go_default_library",
+        "//machinist/config:go_default_library",
+        "//machinist/machine:go_default_library",
+        "//machinist/mserver:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
+    ],
 )
