--- a/machinist/machine/BUILD.bazel
+++ b/machinist/machine/BUILD.bazel
@@ -4,23 +4,23 @@ go_library(
     name = "go_default_library",
     srcs = [
         "commands.go",
-        "config.go",
         "factory.go",
-        "flags.go",
-        "mnode.go",
+        "node.go",
         "templates.go",
     ],
-    importpath = "github.com/enfabrica/enkit/machinist/mnode",
+    importpath = "github.com/enfabrica/enkit/machinist/machine",
     visibility = ["//visibility:public"],
     deps = [
         ":machinist_assets",
         "//astore/rpc:auth-go",
         "//lib/client:go_default_library",
+        "//lib/goroutine:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/multierror:go_default_library",
         "//lib/retry:go_default_library",
-        "//machinist:go_default_library",
+        "//machinist/config:go_default_library",
+        "//machinist/polling:go_default_library",
         "//machinist/rpc:machinist-go",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
@@ -34,6 +34,7 @@ go_library(
         "autouser_binary",
         "libpam_script_install",
         "mnode_sshd_conf",
+        "mnode_systemd_conf",
         "nss_autouser_config",
         "pam_script",
         "pam_sshd_config",
@@ -42,8 +43,17 @@ go_library(
 )
 
 go_embed_data(
+    name = "mnode_systemd_conf",
+    src = "//machinist/machine/assets:machinist.service.gotmpl",
+    package = "machinist_assets",
+    string = True,
+    var = "SystemdTemplate",
+    visibility = ["//visibility:public"],
+)
+
+go_embed_data(
     name = "mnode_sshd_conf",
-    src = "//machinist/mnode/assets:machinist_sshd.conf.gotmpl",
+    src = "//machinist/machine/assets:machinist_sshd.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "SSHDTemplate",
@@ -52,7 +62,7 @@ go_embed_data(
 
 go_embed_data(
     name = "nss_autouser_config",
-    src = "//machinist/mnode/assets:nss-autouser.conf.gotmpl",
+    src = "//machinist/machine/assets:nss-autouser.conf.gotmpl",
     package = "machinist_assets",
     string = True,
     var = "NssConfig",
@@ -65,6 +75,7 @@ go_embed_data(
         "//proxy/nss:nss_autouser",
     ],  # Technically cc_library outputs a .a and .so, doesn't matter which but this embeds both TODO(adam): strip out .a just for sizing reasons
     package = "machinist_assets",
+    var = "AutoUserBinaries",
     visibility = ["//visibility:public"],
 )
 
@@ -78,7 +89,7 @@ go_embed_data(
 
 go_embed_data(
     name = "libpam_script_install",
-    src = "//machinist/mnode/assets:install_libpam-script.sh",
+    src = "//machinist/machine/assets:install_libpam-script.sh",
     package = "machinist_assets",
     var = "InstallLibPamScript",
     visibility = ["//visibility:public"],
@@ -94,10 +105,7 @@ go_embed_data(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "config_test.go",
-        "templates_test.go",
-    ],
+    srcs = ["templates_test.go"],
     embed = [":go_default_library"],
     deps = [
         ":machinist_assets",
