--- a/machinist/cmd/BUILD.bazel
+++ b/machinist/cmd/BUILD.bazel
@@ -3,12 +3,12 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "github.com/enfabrica/enkit/machinist/mnode/cmd",
+    importpath = "github.com/enfabrica/enkit/machinist/cmd",
     visibility = ["//visibility:private"],
     deps = [
         "//lib/client:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
-        "//machinist/mnode:go_default_library",
+        "//machinist:go_default_library",
     ],
 )
 
