--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -33,9 +33,9 @@ go_test(
     name = "go_default_test",
     srcs = ["astore_test.go"],
     data = glob(["testdata/**"]),
-    embed = [":go_default_library"],
     local = True,
     deps = [
+        ":go_default_library",
         "//astore/client/astore:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
