--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -29,8 +29,8 @@ go_test(
         "signer_test.go",
         "ssh_test.go",
     ],
-    embed = [":go_default_library"],
     deps = [
+        ":go_default_library",
         "//lib/cache:go_default_library",
         "//lib/logger/klog:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
