--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -3,9 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_test(
     name = "go_default_test",
     srcs = ["machinist_e2e_test.go"],
-    embed = [":go_default_library"],
     race = "on",
     deps = [
+        ":go_default_library",
         "//machinist/mnode:go_default_library",
         "//machinist/mserver:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
