--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -29,8 +29,8 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = ["agent_test.go"],
-    embed = [":go_default_library"],
     deps = [
+        ":go_default_library",
         "//lib/client:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
