--- a/machinist/machine/BUILD.bazel
+++ b/machinist/machine/BUILD.bazel
@@ -106,8 +106,8 @@ go_embed_data(
 go_test(
     name = "go_default_test",
     srcs = ["templates_test.go"],
-    embed = [":go_default_library"],
     deps = [
+        ":go_default_library",
         ":machinist_assets",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
