--- a/bazel/linting/scripts/BUILD.bazel
+++ b/bazel/linting/scripts/BUILD.bazel
@@ -1,4 +1,15 @@
+load("//bazel/utils:binary.bzl", "declare_binary")
+
 exports_files([
     "git.sh",
     "lint_go.sh",
 ])
+
+declare_binary(
+    name = "golangci-lint",
+    binary = select({
+        "@platforms//os:linux": "@golangci_lint_linux_amd64//:golangci-lint",
+    }),
+    binary_name = "golangci-lint",
+    visibility = ["//visibility:public"],
+)
