--- a/astore/server/BUILD.bazel
+++ b/astore/server/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/astore/server",
-    visibility = ["//visibility:private"],
+    visibility = ["//visibility:public"],
     deps = [
         ":assets",
         ":configs",
