--- a/bazel/linting/scripts/BUILD.bazel
+++ b/bazel/linting/scripts/BUILD.bazel
@@ -3,6 +3,7 @@ load("//bazel/utils:binary.bzl", "declare_binary")
 exports_files([
     "git.sh",
     "lint_go.sh",
+    "merge.sh",
 ])
 
 declare_binary(
