--- a/lib/oauth/BUILD.bazel
+++ b/lib/oauth/BUILD.bazel
@@ -4,11 +4,13 @@ go_library(
     name = "go_default_library",
     srcs = [
         "factory.go",
+        "flow.go",
         "oauth.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/oauth",
     visibility = ["//visibility:public"],
     deps = [
+        "//astore/common:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/khttp:go_default_library",
         "//lib/khttp/kassets:go_default_library",
@@ -16,5 +18,6 @@ go_library(
         "//lib/oauth/cookie:go_default_library",
         "//lib/token:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
+        "@org_golang_x_oauth2//github:go_default_library",
     ],
 )
