--- a/lib/oauth/BUILD.bazel
+++ b/lib/oauth/BUILD.bazel
@@ -19,5 +19,6 @@ go_library(
         "//lib/token:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
         "@org_golang_x_oauth2//github:go_default_library",
+        "@org_golang_x_oauth2//google:go_default_library",
     ],
 )
