--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -41,21 +41,11 @@ buildifier(
 
 load("//bazel/linting:defs.bzl", "lint", "parse_lint")
 
-# TODO(adam): write a simple gazelle-like binary that walks the tree and puts any default_library that has a main as a lint rule
+# TODO(adam): write a simple gazelle-like binary that walks the tree and puts any default_library that has a main as a lint rule, or puts a lint rules in that directory
 lint(
     go_libs = [
         "//machinist/cmd:go_default_library",
         "//astore/server:go_default_library",
+        "//enkit:go_default_library",
     ],
-)
-
-parse_lint(
-    name = "lint-all",
-    lint = ":lint_go",
-)
-
-parse_lint(
-    name = "lint-git",
-    lint = ":lint_go",
-    strategy = "git",
 )
