--- a/lib/oauth/BUILD.bazel
+++ b/lib/oauth/BUILD.bazel
@@ -4,17 +4,23 @@ go_library(
     name = "go_default_library",
     srcs = [
         "factory.go",
+        "multi.go",
         "oauth.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/oauth",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/khttp:go_default_library",
         "//lib/khttp/kassets:go_default_library",
         "//lib/khttp/kcookie:go_default_library",
+        "//lib/multierror:go_default_library",
         "//lib/oauth/cookie:go_default_library",
         "//lib/token:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
         "@org_golang_x_oauth2//:go_default_library",
+        "@org_golang_x_oauth2//github:go_default_library",
+        "@org_golang_x_oauth2//google:go_default_library",
     ],
 )
