--- a/lib/knetwork/kdns/BUILD.bazel
+++ b/lib/knetwork/kdns/BUILD.bazel
@@ -22,9 +22,9 @@ go_test(
         "dns_test.go",
         "records_test.go",
     ],
-    embed = [":go_default_library"],
     race = "on",
     deps = [
+        ":go_default_library",
         "//lib/knetwork:go_default_library",
         "//lib/logger:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
