--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -8,7 +8,6 @@ go_library(
         "controller.go",
         "factory.go",
         "flags.go",
-        "models.go",
         "mserver.go",
     ],
     importpath = "github.com/enfabrica/enkit/machinist/mserver",
@@ -19,6 +18,7 @@ go_library(
         "//lib/logger:go_default_library",
         "//machinist/config:go_default_library",
         "//machinist/rpc:machinist-go",
+        "//machinist/state:go_default_library",
         "@com_github_miekg_dns//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
