--- a/machinist/testing/BUILD.bazel
+++ b/machinist/testing/BUILD.bazel
@@ -3,12 +3,15 @@ load("@io_bazel_rules_go//go:def.bzl", "go_test")
 go_test(
     name = "go_default_test",
     srcs = ["machinist_e2e_test.go"],
+    race = "on",
     deps = [
         "//lib/knetwork:go_default_library",
         "//lib/knetwork/kdns:go_default_library",
+        "//lib/srand:go_default_library",
         "//machinist/config:go_default_library",
         "//machinist/machine:go_default_library",
         "//machinist/mserver:go_default_library",
+        "//machinist/state:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//test/bufconn:go_default_library",
