--- a/astore/server/auth/BUILD.bazel
+++ b/astore/server/auth/BUILD.bazel
@@ -12,6 +12,8 @@ go_library(
     deps = [
         "//astore/common:go_default_library",
         "//astore/rpc:auth-go",
+        "//enauth:go_default_library",
+        "//enauth/plugins:go_default_library",
         "//lib/kcerts:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
@@ -23,6 +25,8 @@ go_library(
         "@org_golang_x_crypto//ed25519:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
+        "@org_golang_x_oauth2//:go_default_library",
+        "@org_golang_x_oauth2//google:go_default_library",
     ],
 )
 
