.gitignore: integrate from internal/.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
 bazel-*
+.bazelrc.*
 .*.sw[po]
+*.orig
+*.pyc
+*.rej
 scrap/
 tags
+.tmp
 tmp
 dist
 bazel-out
 node_modules
 credentials*.json
+.vscode/
+Cargo.lock
+cscope.*
 *.flag*
 *.config*
+.cargo
+__pycache__/
+.pytest_cache
 .idea/
 .ijwb/
