--- a/machinist/state/BUILD.bazel
+++ b/machinist/state/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["controlplane.go"],
+    srcs = [
+        "controlplane.go",
+        "userplane.go",
+    ],
     importpath = "github.com/enfabrica/enkit/machinist/state",
     visibility = ["//visibility:public"],
     deps = ["//lib/config/marshal:go_default_library"],
