--- a/machinist/state/BUILD.bazel
+++ b/machinist/state/BUILD.bazel
@@ -8,7 +8,10 @@ go_library(
     ],
     importpath = "github.com/enfabrica/enkit/machinist/state",
     visibility = ["//visibility:public"],
-    deps = ["//lib/config/marshal:go_default_library"],
+    deps = [
+        "//lib/config/marshal:go_default_library",
+        "//machinist/rpc:machinist-go",
+    ],
 )
 
 go_test(
@@ -18,6 +21,7 @@ go_test(
     deps = [
         ":go_default_library",
         "//lib/srand:go_default_library",
+        "//machinist/rpc:machinist-go",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
