bazel: Implement checkout, query in `enkit bazel affected-targets`
This change partially implements `enkit bazel affected-targets` by doing
the following:

* creating temporary git worktrees for the specified VCS points
* performing a query to list all targets
* parsing the response and listing the total number of targets

Tested: Unit tests in this commit

Benchmarks:

`enkit bazel affected-targets list` currently finishes in ~103s on my
machine on the first run, and ~73s on subsequent runs (which save some
overhead on bazel fetching, since cache directories are reused). We can
expect presubmit machines to always do the former, and it's possible
that this can time can be reduced by half in a future PR by issuing
bazel queries on both worktrees in parallel.

Jira: INFRA-52

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -23,6 +23,13 @@ gazelle(
     prefix = "github.com/enfabrica/enkit",
 )
 
+# Custom gazelle resolve mappings
+# Some third-party dependencies that are bazel-aware bamboozle gazelle running
+# in our repository, which tries to generate dependency labels that don't exist.
+# These mappings keep gazelle from generating bogus dependency labels.
+#
+# gazelle:resolve go kythe.io/kythe/go/platform/delimited @io_kythe//kythe/go/platform/delimited
+
 exports_files(
     [
         "go.mod",
