--- a/lib/bazel/commands/BUILD.bazel
+++ b/lib/bazel/commands/BUILD.bazel
@@ -6,7 +6,9 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/bazel/commands",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/bazel:go_default_library",
         "//lib/client:go_default_library",
+        "//lib/git:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
