bazel: Hash and diff affected targets
This change implements the bulk of the target diffing algorithm, which
seeks to calculate the changes between all the targets of two different
Bazel workspaces (presumably the same workspace at different points in
time).

Tested:

```
bazel run //enkit -- bazel affected-targets list --start=74b74a8 --end=5be18c8
```

which outputs:

```
//:buildifier
//:gazelle
//:gazelle-runner
//lib/knetwork/kdns:dns.go
//lib/knetwork/kdns:dns_test.go
//lib/knetwork/kdns:factory.go
//lib/knetwork/kdns:flags.go
//lib/knetwork/kdns:go_default_library
//lib/knetwork/kdns:go_default_test
//machinist/cmd:cmd
//machinist/cmd:go_default_library
//machinist/mserver/cmd:cmd
//machinist/mserver/cmd:go_default_library
//machinist/mserver/cmd:image
//machinist/mserver/cmd:image.binary
//machinist/mserver/cmd:upload-image
//machinist/mserver:command.go
//machinist/mserver:go_default_library
//machinist/testing:go_default_test
//machinist/testing:machinist_e2e_test.go
//machinist:go_default_library
```

--- a/lib/bazel/BUILD.bazel
+++ b/lib/bazel/BUILD.bazel
@@ -4,8 +4,10 @@ go_library(
     name = "go_default_library",
     srcs = [
         "affected_targets.go",
+        "exec.go",
         "options.go",
         "query.go",
+        "target.go",
         "workspace.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/bazel",
@@ -29,9 +31,11 @@ go_test(
     data = glob(["testdata/**"]),
     embed = [":go_default_library"],
     deps = [
+        "//lib/bazel/proto:go_protos",
         "//lib/errdiff:go_default_library",
         "@com_github_prashantv_gostub//:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@io_bazel_rules_go//go/tools/bazel:go_default_library",
+        "@org_golang_google_protobuf//proto:go_default_library",
     ],
 )
